manifests/overlays/aks/traefik-ingress-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      protocol: TCP
  loadBalancerIP: 52.138.16.103
