manifests/overlays/aks/traefik-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-service
  namespace: kube-system
spec:
  type: LoadBalancer
  loadBalancerIP: 52.138.16.103
