manifests/overlays/aks/cybercrime-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cybercrime-api-ingress
  namespace: cybercrime-api
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/force-hsts: 'true'
    ingress.kubernetes.io/hsts-max-age: '315360000'
    ingress.kubernetes.io/hsts-include-subdomains: 'true'
    ingress.kubernetes.io/content-type-nosniff: 'true'
    ingress.kubernetes.io/frame-deny: 'true'
    ingress.kubernetes.io/browser-xss-filter: 'true'
