manifests/overlays/aks/cybercrime-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cybercrime-frontend-ingress
  namespace: cybercrime-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/force-hsts: 'true'
    ingress.kubernetes.io/hsts-max-age: '315360000'
    ingress.kubernetes.io/hsts-include-subdomains: 'true'
